# pomo

./: .eslintrc.cjs  .gitignore  .prettierignore  .prettierrc  Cargo.toml  README.md  certificate-base64.txt  knip.json  package.json  pnpm-lock.yaml  tailwind.config.js
.github/workflows/: main.yml  test.yml
client/: README.md  jest.config.js  tsconfig.json  vite.config.ts
client/src/: App.tsx  Booter.tsx  Providers.tsx  copy.ts  getElectronBridgeOrMock.tsx  global.d.ts  index.css  main.tsx  vitest.d.ts
client/src/bridge/: http.ts  setup.ts  slack.ts  store.ts
client/src/components/: Box.tsx  LineBreak.tsx  index.ts  input.css
client/src/components/Button/: Button.stories.tsx  Button.tsx  button.css
client/src/components/Checkbox/: Checkbox.tsx  checkbox.css
client/src/hooks/: index.ts  machines.ts  machines.tsx  providers.ts  providers.tsx  useBridge.ts  useBridge.tsx  useConfig.spec.tsx  useConfig.ts  useLogger.ts  useLogger.tsx
client/src/integrations/: clock.spec.ts  clock.ts  createCtx.ts  index.ts  os.spec.ts  os.ts  slack.spec.ts  slack.ts  stats.ts
client/src/machines/: constants.ts  createFakeHooks.ts  index.ts  utils.ts
client/src/pages/: Navigation.tsx  PageManager.spec.tsx  PageManager.stories.tsx  PageManager.tsx  Pomodoro.spec.tsx  Pomodoro.tsx  Stats.tsx  Theme.stories.tsx  index.ts
client/src/testHelpers/: ForceError.tsx  createFakeBridge.ts  createMockFn.ts  ignore.ts  pageModels.ts  rtl.tsx  setupTests.ts  test.setup.ts  tick.ts
client/src/testUtils/: FakeIpc.spec.ts  FakeIpcMain.ts  FakeIpcRenderer.ts  createMockBridge.ts  createMockFn.ts  ignore.ts  jest.setup.ts  jest.test.js  pageModels.ts  rtl.tsx  tick.ts
client/src/tests/: settings.spec.tsx
client/src/theme/: colors.ts  index.ts  updateTheme.ts  utils.ts
client/src/utils/: Option.ts  Result.spec.ts  Result.ts  asserts.spec.ts  asserts.ts  commands.ts  constants.spec.ts  constants.ts  deepFreeze.spec.ts  deepFreeze.ts  format.spec.ts  format.ts  formatTrayTime.ts  merge.ts  pick.spec.ts  pick.ts  testids.ts  types.ts
lib/: Cargo.toml
lib/src/: events.rs  lib.rs  timer.rs
scripts/: bump.nu
src-tauri/: tauri.conf.json
tauri/: Cargo.toml  tauri.conf.json
tauri/src/: commands.rs  main.rs  models.rs  setup.rs  timer.rs  tray.rs
(+72 files in other folders)
