[package]
name = "app"
description = "A Tauri App"
default-run = "app"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
lib = { path = "../lib" }
serde = {workspace = true}
serde_json = "1.0"
tauri = { version = "1.5.3", features = [ "app-all", "window-set-focus", "http-request", "updater", "shell-open", "system-tray"] }
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
